--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,13 @@
             <version>3.3.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreesvg -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreesvg</artifactId>
+            <version>3.2</version>
+        </dependency>
+
 
     </dependencies>
 
