--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
 
