--- a/src/main/resources/bot_config.properties
+++ b/src/main/resources/bot_config.properties
@@ -3,3 +3,5 @@
 token=${bot.tocken}
 username=${bot.username}
 db-logging=true
+donations_enabled=${bot.donations_enabled}
+donations_link=${bot.donations_link}
